# secure-llm

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml
examples/: sandbox_shell.rs  sandbox_shell_network.rs
profiles/: claude.toml  cursor.toml  gemini.toml  windsurf.toml
scripts/: install-deps.sh
src/: cli.rs  cli_handler.rs  lib.rs  main.rs  orchestrator.rs
src/config/: error.rs  loader.rs  mod.rs  profiles.rs  schema.rs
src/control/: channel.rs  mod.rs  plane.rs  protocol.rs  socket.rs
src/portmon/: bridge.rs  detector.rs  error.rs  forwarder.rs  mod.rs
src/proxy/: connect.rs  error.rs  hold.rs  mod.rs  policy.rs  server.rs  tls.rs
src/sandbox/: builder.rs  bwrap.rs  ca.rs  cleanup.rs  config.rs  error.rs  handle.rs  mod.rs  mounts.rs  netns.rs
src/sandbox/mounts/: mod.rs  pattern.rs  table.rs
src/shim/: egress.rs  mod.rs  reverse.rs
src/telemetry/: error.rs  events.rs  mod.rs  syslog.rs
src/tui/: allowlist_state.rs  app.rs  input.rs  layout.rs  mod.rs  runner.rs  state.rs  transport.rs
src/tui/multiplexer/: mod.rs  tmux.rs  zellij.rs
src/tui/widgets/: allowlist.rs  logs.rs  mod.rs  pending.rs  ports.rs  status.rs
tests/: sandbox_integration.rs
